- Fixed bug #44899 (__isset usage changes behavior of empty()) (patch by Etienne Kneuss)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@258939 c90b9560-bf6c-de11-be94-00142212c4b1